--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "@testing-library/user-event": "^12.0.7",
+    "axios": "^0.19.2",
+    "cypress": "^4.12.1",
+    "dom": "0.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "router": "^1.3.5",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
