--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.4.1",
     "react-strap": "0.0.1",
     "reactstrap": "^8.5.1",
+    "styled-components": "^5.1.1",
     "yup": "^0.29.3"
   },
   "scripts": {
