--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "^4.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "yup": "^0.29.3"
