--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1",
     "yup": "^0.29.3"
   },
