--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "cypress": "^5.1.0",
+    "i": "^0.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "reactstrap": "^8.5.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
