--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.1.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
-    "cypress": "^5.1.0",
     "i": "^0.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,6 +18,7 @@
     "yup": "^0.29.3"
   },
   "scripts": {
+    "cy:open": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^5.2.0"
   }
 }
