--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
     "axios": "^0.20.0",
+    "components": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "styled": "^1.0.0",
+    "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
   "scripts": {
