--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
+    "cypress": "^5.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "reactstrap": "^8.7.1",
+    "router": "^1.3.5",
+    "styled-components": "^5.2.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
