--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "lambda-eats",
   "version": "0.1.0",
@@ -8,7 +7,6 @@
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
     "axios": "^0.21.1",
-    "cypress": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.0.0-beta.0",
@@ -36,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^6.2.0"
   }
 }
