small debugging left. waterboarding complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "conde",
-        "naste"
+        "confit",
+        "lambdalogo",
+        "naste",
+        "neonpizza"
     ]
 }
