--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cypress": "^6.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -35,5 +36,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
