--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
   "scripts": {
