--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
     "axios": "^0.21.1",
+    "cypress": "^6.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.9.0",
+    "save-dev": "0.0.1-security",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
