--- a/web-sprint-challenge-single-page-applications/package.json
+++ b/web-sprint-challenge-single-page-applications/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "lambda-eats",
+  "name": "web-sprint-challenge-single-page-applications",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.3",
-    "@testing-library/react": "^10.4.8",
-    "@testing-library/user-event": "^12.1.1",
-    "cypress": "^6.5.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropdown": "^1.9.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "yum": "^0.1.1"
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +18,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
