--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
-    "react": "^16.13.1",
+    "axios": "^0.21.1",
+    "dom": "^0.0.3",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
+    "router": "^1.3.5",
+    "styled-components": "^5.2.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
