--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "cypress": "^7.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
