--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
