fixed my cypress mvp done

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
