--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#2A301F",
-        "titleBar.activeBackground": "#3B432B",
-        "titleBar.activeForeground": "#F9FAF8"
+        "activityBar.background": "#123503",
+        "titleBar.activeBackground": "#194A05",
+        "titleBar.activeForeground": "#F1FEEC"
     }
 }
