--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
