--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
   "scripts": {
